// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormattedAmountWithFiatValue.vue > [Fiat FontSizeRate Medium]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="medium"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Fiat FontWeightRate Medium]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="medium"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Fiat Format as Value Format Medium]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="medium"
    fontweightrate="medium"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="medium"
    fontweightrate="medium"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [FontSizeRate Small]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="small"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [FontWeightRate Small]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="small"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Has not Fiat Value]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <!--v-if-->
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Symbol In Decimal Container]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol="XOR"
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="true"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Value and Fiat value only, can be hidden]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="true"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="true"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Value and Fiat value only]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Value only, can be hidden]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="true"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value=""
    valuecanbehidden="true"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [Value only]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value=""
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [With Empty Value]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container formatted-amount__container--nowrap"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value=""
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value=""
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [With Left Shift for Fiat]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="true"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [With asset symbol]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol="XOR"
    class=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;

exports[`FormattedAmountWithFiatValue.vue > [With value class]: should be rendered correctly 1`] = `
<div
  class="formatted-amount__container"
  data-v-87b2721a=""
>
  <formatted-amount-stub
    assetsymbol=""
    class="formatted-amount--test"
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="false"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
  <formatted-amount-stub
    assetsymbol=""
    customizablecurrency=""
    data-v-87b2721a=""
    fiatdefaultrounding="false"
    fontsizerate="normal"
    fontweightrate="normal"
    integeronly="false"
    isfiatvalue="true"
    symbolasdecimal="false"
    value="1,234,567.890123"
    valuecanbehidden="false"
    withleftshift="false"
  />
</div>
`;
